--- a/colorchanger/colorchanger.html
+++ b/colorchanger/colorchanger.html
@@ -11,7 +11,7 @@
 
   <nav>
     <h1>🎨 Color Changer</h1>
-    <a href="portfolio.html">← Back to Portfolio</a>
+    <a href="index.html">← Back to Portfolio</a>
   </nav>
 
   <div class="container">
@@ -35,3 +35,4 @@
   </script>
 </body>
 </html>
+
