--- a/index.html
+++ b/index.html
@@ -1,57 +1,38 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>James Jethro Lucero | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="portfolio.css">
-</head>
-<body>
-  <nav>
-    <div class="nav-left">
-      <img src="profile.jpg" alt="James Jethro Lucero">
-      <h1>JAMES JETHRO H. LUCERO</h1>
+<section id="projects">
+    <h2 class="section-title">Projects</h2>
+
+    <div class="projects-container">
+
+        <div class="project-card">
+            <h3>Color Changer</h3>
+            <p>A simple JavaScript project that changes the background color with a button.</p>
+            <a href="#" class="project-btn">View Demo</a>
+        </div>
+
+        <div class="project-card">
+            <h3>UI/UX Mockups</h3>
+            <p>Collection of UI mockups and wireframes created using Figma.</p>
+            <a href="#" class="project-btn">View Designs</a>
+        </div>
+
+        <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>This website — built with HTML, CSS, and JavaScript to show my skills.</p>
+            <a href="#" class="project-btn">View Code</a>
+        </div>
+
+        <div class="project-card">
+            <h3>Interactive To-Do List</h3>
+            <p>A JavaScript-powered to-do application that lets users add, delete, and mark tasks as completed.</p>
+            <a href="#" class="project-btn">View Demo</a>
+        </div>
+
+        <div class="project-card">
+            <h3>Responsive Landing Page</h3>
+            <p>A clean, mobile-responsive landing page created using HTML5, CSS3, and Flexbox/Grid layout.</p>
+            <a href="#" class="project-btn">View Page</a>
+        </div>
+
     </div>
-    <div class="nav-right">
-      <a href="#about">About Me</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-      <button id="theme-toggle">🌙</button>
-    </div>
-  </nav>
+</section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      Hi! I’m an aspiring programmer with a passion for coding and building creative projects.
-      I’m currently learning HTML, CSS, and Python as I develop practical skills and create
-      meaningful applications. I love solving problems, exploring new technologies, and taking
-      on challenges that help me grow. My goal is to keep improving every day and contribute to
-      projects that make a positive impact!
-    </p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-
-    <div class="project-grid">
-      <div class="project-card">
-        <h3>🎨 Color Changer</h3>
-        <p>A simple web app that changes the background color of a box when you click a button. Built using HTML, CSS, and JavaScript.</p>
-        <a href="colorchanger.html" class="project-link" target="_blank">Try the Color Changer →</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:lucerojethro123@gmail.com">lucerojethro123@gmail.com</a></p>
-    <p>Phone: 09953243486</p>
-    <p><a href="https://github.com/lucerojethro" target="_blank" class="github-link">Visit my GitHub 🔗</a></p>
-  </section>
-
-
-  <script src="theme.js"></script>
-</body>
-</html>
