--- a/colorchanger.html
+++ b/colorchanger.html
@@ -11,7 +11,7 @@
 
   <nav>
     <h1>🎨 Color Changer</h1>
-    <a href="portfolio.html">← Back to Portfolio</a>
+    <a href="index.html">← Back to Portfolio</a>
   </nav>
 
   <div class="container">
