--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
     <h2>About Me</h2>
     <p>
       Hi! I’m an aspiring programmer with a passion for coding and building creative projects.
-      I’m currently learning HTML, CSS, and Python as I develop practical skills and create
-      meaningful applications. I love solving problems, exploring new technologies, and taking
-      on challenges that help me grow. My goal is to keep improving every day and contribute to
-      projects that make a positive impact!
+      I’m currently learning HTML, CSS, and Python while building projects that improve my skills.
+      My goal is to grow as a developer and create meaningful applications that make a positive impact.
     </p>
   </section>
 
@@ -36,10 +34,17 @@
     <h2>Projects</h2>
 
     <div class="project-grid">
+
       <div class="project-card">
         <h3>🎨 Color Changer</h3>
-        <p>A simple web app that changes the background color of a box when you click a button. Built using HTML, CSS, and JavaScript.</p>
+        <p>A simple web app that changes the background color of a box when you click a button.</p>
         <a href="colorchanger.html" class="project-link" target="_blank">Try the Color Changer →</a>
+      </div>
+
+      <div class="project-card">
+        <h3>🧮 Calculator</h3>
+        <p>A clean, functional calculator built with HTML, CSS, and JavaScript.</p>
+        <a href="calculator.html" class="project-link" target="_blank">Open Calculator →</a>
       </div>
     </div>
   </section>
@@ -50,7 +55,6 @@
     <p>Phone: 09953243486</p>
     <p><a href="https://github.com/lucerojethro" target="_blank" class="github-link">Visit my GitHub 🔗</a></p>
   </section>
-
 
   <script src="theme.js"></script>
 </body>
